--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --base=/goit-js-hw-11/",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0",
     "glob": "^11.0.0",
     "postcss": "^8.4.41",
     "postcss-sort-media-queries": "^5.2.0",
@@ -20,9 +17,8 @@
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.11.0",
+    "flatpickr": "^4.6.13",
     "izitoast": "^1.4.0",
-    "simplelightbox": "^2.14.3",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
   }
